--- a/cardProj/view/Account.storyboard
+++ b/cardProj/view/Account.storyboard
@@ -41,15 +41,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhA-Nh-CB3">
-                                        <rect key="frame" x="186" y="119" width="42" height="21"/>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w2c-lZ-qFD">
+                                        <rect key="frame" x="113" y="346" width="88" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Go to Sign In"/>
+                                        <connections>
+                                            <action selector="signInNav:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="h4Z-58-IlV"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QhA-Nh-CB3">
+                                        <rect key="frame" x="20" y="287" width="339" height="51"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" red="1" green="0.76245909250193511" blue="0.84863799477475643" alpha="0.8980392157" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
@@ -57,6 +65,8 @@
                     </view>
                     <connections>
                         <outlet property="bottomLabel" destination="o40-qi-Z9P" id="wwp-gi-jcL"/>
+                        <outlet property="guestLabel" destination="QhA-Nh-CB3" id="FH8-hU-4In"/>
+                        <outlet property="guestScreen" destination="ohA-0I-7VA" id="XZo-iY-Jko"/>
                         <outlet property="topLabel" destination="5xU-7x-dh7" id="qSx-Kq-XUm"/>
                         <outlet property="userScreen" destination="Tlx-gW-kta" id="I3O-bv-qWo"/>
                     </connections>
